[tool.poetry]
name = "example"
version = "0.1.0"
description = "example of ds proyect"
authors = ["martinalon <martinalonsofloresgonzalez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
